--- a/readme.me
+++ b/readme.me
@@ -5,8 +5,7 @@ Please visit the above website to check out the deployment for this project (apo
 Leave your foodie critique review.
 
 Submit restaurant location, pricing, & specialities. Leave comments!
-Node.js and Express.js middleware connects user and restaurant information via
-mongoose to a server-side MongoDB database.
+Node.js and Express.js middleware connects user and restaurant information via mongoose to a server-side MongoDB database.
 RESTful route CRUD functionality.
 Session-cookie user log-in authentication for editing and submitting new restaurants.
-Cloudinary stored images. Helmet for security. Vanilla javascript & ESJ. Bootstrap CSS.
+Cloudinary stored images. Helmet for security. Vanilla javascript with ESJ dyanmic templating. Bootstrap CSS.
