--- a/readme.me
+++ b/readme.me
@@ -1,3 +1,5 @@
+Props to Colt Steele web developer teacher.
+
 https://pandareview.onrender.com/
 
 Please visit the above website to check out the deployment for this project (apologise for initial page load time).
